--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <pug src="src/pages/index.pug" />
-    <script type="module" src="./src/main.ts"></script>
+    <script type="module" src="./src/typescript/main.ts"></script>
   </body>
 </html>
